test_suite5/ALAN/test_suite/alan-2022-examples/failing/002710_mutation.alan
source aX begin ZW := 8 boolean Pb; relax end
